appId: com.duckduckgo.mobile.ios
tags:
    - ipad
    - duckplayer_classic

---

# Load constants
- runFlow:
    file: shared/constants.yaml

# Set up 
- runFlow: 
    file: ../shared/setup_duckplayer.yaml


# Open Settings
- runFlow: 
    file: shared/open_settings.yaml

- tapOn:
    id: chevron.up.chevron.down

# Set to "Open Automatically"
- tapOn: ${output.alwaysLabel}

# Close Settings
- runFlow: 
    file: shared/close_settings.yaml

# Load Youtube URL
- runFlow: 
    file: shared/load_duck_url.yaml

# Verify Duck Player Classic opens
- runFlow:
    file: shared/duckplayer_is_visible.yaml

- tapOn:
    point: "50%,15%"

- tapOn:
    text: ${output.watchOnYoutubeLabel}

- waitForAnimationToEnd

- runFlow:
    file: shared/youtube_is_visible.yaml