appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - sync
name: 06_delete_account
---

# Set up
- runFlow:
    file: ../shared/sync_setup.yaml

# Set Internal User
- tapOn: Browsing menu
- tapOn: Settings
- runFlow:
    file: ../shared/set_internal_user_from_settings.yaml

    # Set Dev environment
- runFlow:
    file: ../shared/set_sync_dev_environment.yaml

# Create account
- runFlow:
    file: ../shared/sync_create.yaml

# Remove account
- runFlow:
    file: ../shared/sync_delete.yaml

# Try to login and check for error
- assertVisible: Sync With Another Device
- tapOn: Sync With Another Device
- tapOn: Passcode field
- inputText: "0000"
- pressKey: Enter
- runFlow:
    when:
      visible: Allows you to upload photographs and videos
    commands:
        - tapOn: "Allow"
- assertVisible: Scan QR Code
- tapOn: Manually Enter Code
- tapOn: Paste
- assertVisible: Sync failed.
- assertVisible: Please try again.
- tapOn: Got It
